test/chainsaw/reconcile/02-scale-mirror.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reconcile-quay-mirror
spec:
  replicas: 3
