test/chainsaw/reconcile/05-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reconcile-quay-mirror
spec:
  template:
    metadata:
      labels:
        l1: TESTING
      annotations:
        a1: TESTING
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: quay-component
                  operator: In
                  values:
                  - quay-mirror
---
apiVersion: quay.redhat.com/v1
kind: QuayRegistry
metadata:
  name: reconcile
status:
  conditions:
  - type: ComponentHPAReady
    status: "True"
  - type: ComponentRouteReady
    status: "True"
  - type: ComponentMonitoringReady
    status: "True"
  - type: ComponentCacheReady
    status: "True"
  - type: ComponentPostgresReady
    status: "True"
  - type: ComponentObjectStorageReady
    status: "True"
  - type: ComponentClairReady
    status: "True"
  - type: ComponentClairPostgresReady
    status: "True"
  - type: ComponentTLSReady
    status: "True"
  - type: ComponentRedisReady
    status: "True"
  - type: ComponentQuayReady
    status: "True"
  - type: ComponentMirrorReady
    reason: ComponentReady
    status: "True"
  - type: Available
    status: "True"
  - type: ComponentsCreated
    status: "True"
  - type: RolloutBlocked
    status: "False"
